crates/formatter/tests/snapshots/snapshots__migrations__000297_notifications_inbox.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create type inbox_notification_read_status as enum (
	'all',
	'unread',
	'read'
);

create table inbox_notifications (
	id uuid primary key,
	user_id uuid not null references users (id) on delete cascade,
	template_id uuid not null references notification_templates (
		id
	) on delete cascade,
	targets uuid [],
	title text not null,
	content text not null,
	icon text not null,
	actions jsonb not null,
	read_at timestamp with time zone,
	created_at timestamp with time zone not null default NOW()
);

create index idx_inbox_notifications_user_id_read_at
on inbox_notifications (user_id, read_at);
create index idx_inbox_notifications_user_id_template_id_targets
on inbox_notifications (user_id, template_id, targets);
