crates/formatter/tests/snapshots/snapshots__migrations__000298_provisioner_jobs_status_idx.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create index idx_provisioner_jobs_status on provisioner_jobs using btree(
	job_status
);
