crates/formatter/tests/snapshots/snapshots__migrations__000301_add_workspace_app_audit_sessions.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table workspace_app_audit_sessions;
