crates/formatter/tests/snapshots/snapshots__migrations__000302_fix_app_audit_session_race.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
alter table workspace_app_audit_sessions drop column id;
