crates/formatter/tests/snapshots/snapshots__migrations__000302_fix_app_audit_session_race.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Add column with default to fix existing rows.
alter table workspace_app_audit_sessions
	add column id uuid primary key default gen_random_uuid();
alter table workspace_app_audit_sessions alter column id drop default;
