crates/formatter/tests/snapshots/snapshots__migrations__000303_add_workspace_agent_devcontainers.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
drop table workspace_agent_devcontainers;
