crates/formatter/tests/snapshots/snapshots__migrations__000303_add_workspace_agent_devcontainers.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
create table workspace_agent_devcontainers (
	id uuid primary key,
	workspace_agent_id uuid not null,
	created_at timestamptz not null default now(),
	workspace_folder text not null,
	config_path text not null,
	foreign key (workspace_agent_id) references workspace_agents (id)
		on delete cascade
);

comment on table workspace_agent_devcontainers is 'Workspace agent devcontainer configuration';
comment on column workspace_agent_devcontainers.id is 'Unique identifier';
comment on column workspace_agent_devcontainers.workspace_agent_id is 'Workspace agent foreign key';
comment on column workspace_agent_devcontainers.created_at is 'Creation timestamp';
comment on column workspace_agent_devcontainers.workspace_folder is 'Workspace folder';
comment on column workspace_agent_devcontainers.config_path is 'Path to devcontainer.json.';

create index workspace_agent_devcontainers_workspace_agent_id
	on workspace_agent_devcontainers (workspace_agent_id);

comment on index workspace_agent_devcontainers_workspace_agent_id is 'Workspace agent foreign key and query index';
