crates/formatter/tests/snapshots/snapshots__migrations__000304_github_com_user_id_comment.down.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
comment on column users.github_com_user_id is 'The GitHub.com numerical user ID. At time of implementation, this is used to check if the user has starred the Coder repository.';
